--- a/frontend/src/styles/vars.scss
+++ b/frontend/src/styles/vars.scss
@@ -170,6 +170,12 @@ $_lifecycle_dormant: #f86234;
     --font-medium: 500;
     --font-semibold: 600;
 
+    // Colors of the PostHog logo
+    --brand-blue: #1d4aff;
+    --brand-red: #f54e00;
+    --brand-yellow: #f9bd2b;
+    --brand-key: #000; // This is going to be white in dark mode
+
     // LEGACY data colors (e.g. insight series). Note: colors.ts relies on these values being hexadecimal
     --blue: #597dce;
     --blue-light: #8da9e7;
